# Student-managment-system-

./: .gitignore
Deanery/: CMakeLists.txt  main  main.c
Deanery/modules/: database.c  database.h  stats.h  student.c  student.h
Deanery/modules/database/: database.c  database.h
Deanery/modules/stats/: stats.c  stats.h
Deanery/modules/student/: student.c  student.h
Deanery/utilities/input output/: io.c  io.h
Deanery/utilities/utils/: utils.c  utils.h
